<resources>
    <string name="app_name">CapstoneProject</string>
    <string name="version_app">Version 1.0</string>
    <string name="title_splash_screen">Jakarta Smart City</string>

    <string name="lewati">Lewati</string>
    <string name="lanjutkan">lanjutkan</string>
    <string name="judul_splash">Judul SplashScreen</string>
    <string name="title_splash_1">Buat laporan apapun dengan mudah</string>
    <string name="title_splash_2">Laporan kamu akan segera diproses langsung</string>
    <string name="title_splash_3">Kemudian laporan kamu akan segera diproses oleh Pemerintah Daerah Jakarta</string>

    <string name="create">Create</string>
    <string name="tv_description">Deskripsi Laporan</string>
    <string name="label">Deskripsi Laporan</string>
    <string name="confirmation_statement">Iya, saya setuju</string>
    <string name="title_statement">Pernyataan</string>
    <string name="statement_description">Dengan ini saya menyatakan laporan saya adalah benar dan dapat dipertanggungjawabkan</string>
    <string name="ex_description_1">Rincian laporan dan alamat kejadian</string>
    <string name="ex_description_2">Jalan Merdeka Selatan 9, dekat Balai Kota DKI Jakarta</string>
    <string name="ex_description_3">Keterangan tambahan [patokan alamat/ NIK/ No. KJP/  No. Pelanggan/ Slip Gaji]:</string>
    <string name="ex_description_4">Patokannya depan Halte Trans Jakarta Balai Kota, nah depan haltenya ada lubang pak, bisa membahayakan pengendara dan orang lain. Kalau hujan juga menyebabkan genangan kecil pak, oleh karena itu butuh cepat perbaikan pada lubang tersebut. Terima kasih pak</string>
    <string name="helper_description">Minimum Tulisan</string>
    <string name="title_about_us">about us</string>

    <string name="btn_gallery">Gallery</string>
    <string name="btn_camera">Camera</string>
    <string name="pilih_input">Pilih Input</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name_capstone">Member Capstone</string>
    <string name="id_capstone">ID Member</string>
    <string name="div_capstone">Divisi</string>
    <string name="member_title">Capstone Member</string>

    <string name="google_maps">AIzaSyBp45bjdqqWT1pvSOg4CxZc672Pv50q9ps</string>

    <string name="btn_jalan">masalah jalan</string>
    <string name="category">Report Category</string>
    <string name="category_title">Kategori</string>
    <string name="btn_pohon">masalah pohon</string>
    <string name="btn_sampah">masalah sampah</string>
    <string name="btn_sampah_berantakan">Sampah Berantakan</string>
    <string name="pilih_subcategory">Pilih Sub Category</string>
    <string name="btn_sampah_berbabu">Sampah Berbau Tak Sedap</string>
    <string name="btn_sampah_menumpuk">Sampah Menumpuk</string>
    <string name="btn_pohon_tumbang">Pohon Tumbang</string>
    <string name="btn_pohon_rimbun">pohon rimbun</string>
    <string name="btn_jalan_berlubang">Jalan Berlubang</string>
    <string name="btn_jalan_tergenang">Jalan Tergenang</string>
    <string name="content_category">jalan</string>
    <string name="sub_category_title">Sub Kategori</string>
    <string name="description_title">Deskripsi</string>
    <string name="content_description">Deskripsi</string>
    <string name="confirmation_title">Konfirmasi Laporan</string>
    <string name="similiar_title">Laporan yang Mirip</string>
    <string name="add_report_button">Tambahkan Berita Baru</string>
    <string name="ovveride_report">Timpa Berita yang Sudah Ada</string>


    <string name="leku_app_name" translatable="false">Leku Demo</string>
    <string name="google_maps_key" />
    <string name="launch_map_picker" translatable="false">LAUNCH MAP LOCATION PICKER ACTIVITY</string>
    <string name="launch_legacy_map_picker" translatable="false">LAUNCH LEGACY MAP LOCATION ACTIVITY</string>
    <string name="launch_map_picker_with_pois" translatable="false">LAUNCH MAP WITH POIS</string>
    <string name="launch_map_picker_with_style" translatable="false">LAUNCH MAP WITH STYLE</string>
    <string name="leku_lib_version" translatable="false">version 8.0.0</string>
    <string name="success_report">Laporan berhasil ditambahkan</string>

    <string name="Report">Report</string>
    <string name="Filter">Filter</string>
    <string name="Bookmark">Bookmark</string>
    <string name="title_activity_bottom_navigation">Capstone</string>
    <string name="title_home">Home</string>
    <string name="title_add">Add</string>
    <string name="title_profile">Profile</string>
    <string name="insertBookmark">Report Has been Added from Bookmark</string>
    <string name="removeBookmark">Report has been removed from Bookmark</string>
</resources>