<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.confirmationreport.ConfirmationReportActivity">
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:text="@string/confirmation_title"
            android:layout_marginBottom="16sp"/>

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/img_report"
            android:layout_width="wrap_content"
            android:layout_height="250dp"
            android:layout_gravity="center_horizontal"
            android:src="@color/sapphire"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category_title"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"/>

        <TextView
            android:id="@+id/category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/content_category"
            android:textColor="@color/black"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sub_category_title"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"/>

        <TextView
            android:id="@+id/sub_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/content_category"
            android:textColor="@color/black"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="32dp"
            android:layout_marginTop="8dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description_title"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"/>

        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/content_description"
            android:textColor="@color/black"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="32dp"
            android:layout_marginTop="8dp"/>

        <TextView
            android:id="@+id/title_pernyataaan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/title_statement"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/deskripsi_pernyataan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/nero"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="16dp"
            android:text="@string/statement_description" />

        <CheckBox
            android:id="@+id/cb_pernyataan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:layout_marginTop="8dp"
            android:layout_marginStart="32dp"
            android:text="@string/confirmation_statement"/>

    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.core.widget.NestedScrollView>
