<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.category.CategoryActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/category"
        android:textSize="24sp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_jalan"
        android:layout_width="150dp"
        android:layout_height="80dp"
        android:layout_marginTop="32dp"
        android:text="@string/btn_jalan"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintHorizontal_bias="0.542"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/btn_pohon"
        android:layout_width="150dp"
        android:layout_height="80dp"
        android:layout_marginTop="16dp"
        android:text="@string/btn_pohon"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/btn_jalan"
        app:layout_constraintHorizontal_bias="0.545"
        app:layout_constraintStart_toStartOf="@+id/btn_jalan"
        app:layout_constraintTop_toBottomOf="@+id/btn_jalan" />

    <Button
        android:id="@+id/btn_sampah"
        android:layout_width="150dp"
        android:layout_height="80dp"
        android:layout_marginTop="16dp"
        android:text="@string/btn_sampah"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/btn_pohon"
        app:layout_constraintHorizontal_bias="0.545"
        app:layout_constraintStart_toStartOf="@+id/btn_pohon"
        app:layout_constraintTop_toBottomOf="@+id/btn_pohon" />


</androidx.constraintlayout.widget.ConstraintLayout>