<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_button"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_gravity="center"
    android:background="@color/white_smokes"
    android:elevation="100dp"
    tools:context=".ui.category.CatPohonActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pilih_subcategory"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginTop="8dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <Button
            android:id="@+id/btn_pohon_tumbang"
            android:layout_width="130dp"
            android:layout_height="80dp"
            android:layout_marginTop="16dp"
            android:text="@string/btn_pohon_tumbang"
            android:textSize="14sp" />

        <Button
            android:id="@+id/btn_pohon_rimbun"
            android:layout_width="130dp"
            android:layout_height="80dp"
            android:layout_marginTop="16dp"
            android:text="@string/btn_pohon_rimbun"
            android:textSize="14sp" />
    </LinearLayout>


</LinearLayout>