<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:gravity="center">
    <com.google.android.material.card.MaterialCardView
        android:layout_width="350dp"
        android:layout_height="80dp"
        android:layout_gravity="center"
        android:foregroundGravity="center"
        android:checkable="true"
        android:clickable="true"
        android:elevation="100dp"
        android:focusable="true"
        app:strokeColor="@color/black"
        android:outlineAmbientShadowColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/item_member_capstone"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:foregroundGravity="center"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="50dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/civ_member_capstone"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginStart="16dp"
                android:src="@color/black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_name_capstone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="80dp"
                android:text="@string/name_capstone"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/civ_member_capstone"
                app:layout_constraintTop_toTopOf="@+id/civ_member_capstone" />


            <TextView
                android:id="@+id/tv_id_capstone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:text="@string/id_capstone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/tv_name_capstone"
                app:layout_constraintTop_toBottomOf="@+id/tv_name_capstone" />


            <TextView
                android:id="@+id/tv_div_capstone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/div_capstone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/tv_id_capstone"
                app:layout_constraintTop_toBottomOf="@+id/tv_id_capstone" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>
</LinearLayout>
